adicionei a pagina "missão"
nesse comit quero testar o porque não está funcionando a chamada da folha de estilos nessa nova página html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>CRIARTIVIDADES</h1>
     </div>
     <div class="nav-center">
-      <a class="active" href="#home">MISSÃO</a>
+      <a class="active" href="./src/html/missao.html">MISSÃO</a>
       <a href="#contact">ATIVIDADES</a>
       <a href="#about">AVALIAÇÕES</a>
     </div>
@@ -96,63 +96,6 @@
       </div>
     </div>
   </section>
-  <!-- seção antiga do figma
-    <section class="section-1">
-        <div>
-            <img class="section-1-img" src="./src/img/section-1.jpg">
-        </div>
-        <div>
-            <h2>Desenvolva seu projeto</h2>
-            <p>O laboratório Criartividades oferece uma ampla gama de cursos e workshops onde você pode aprender novas técnicas para potencializar sua criatividade e dar vida aos seus projetos.</p>
-            <p>💡[CURSO] Como se sustentar através do seu projeto criativo?</p>
-            <p>💡[WORKSHOP] Exercícios para desenvolver sua criatividade.</p>
-            <p>💡[COMUNIDADE] Discussões sobre materiais para ajudar na jornada criativa.
-            </p>
-            <p>Independentemente do nível de habilidade ou experiência, todos são bem-vindos a se juntar à nossa comunidade criativa e aprender conosco.</p>
-        </div>
-    </section>
-    
-    <section class="section-1">
-        <div>
-            <h2>Visibilidade e financiamento</h2>
-            <p>Na nossa plataforma de vaquinha online você compartilha seu projeto com o mundo e:</p>
-            <p>💵 Pode compartilhar seu projeto com seus conhecidos.</p>
-            <p>💵 Oportunidades de exposição a potenciais patrocinadores.</p>
-            <p>💵 Sem custos iniciais.</p>
-        </div>
-        <div>
-            <img class="section-2-img" src="./src/img/section-2.jpg">
-        </div>
-    </section>
-
-    <section class="section-3">
-        <div>
-            <img class="section-3-img" src="./src/img/section-3.jpg">
-        </div>
-        <div>
-            <h2>Se conecte com uma comunidade de criadores</h2>
-            <p>Colabore, compartilhe ideias e receba dicas de como desenvolver o que está pensando.</p>
-        </div>
-    </section>
-    <section>
-      <h2> Quem pode se beneficiar </h2>
-    </section>
-      <section>
-      <h2> Article </h2>
-    </section> -->
-
-  <!-- Seção de Financiamento Coletivo 
-    <section id="crowdfunding" class="crowdfunding-section">
-        <h2>Plataforma de Financiamento Coletivo</h2>
-        <p>Explore nossa plataforma de financiamento coletivo exclusiva, onde você pode lançar campanhas de crowdfunding para apoiar projetos criativos inovadores.</p>
-        <p>Com nosso sistema de crowdfunding, você pode:</p>
-        <ul>
-            <li>Lançar vaquinhas online para arrecadar fundos</li>
-            <li>Conectar-se com uma comunidade de apoiadores apaixonados</li>
-            <li>Alcançar seu público-alvo e compartilhar sua visão</li>
-            <li>Tornar suas ideias criativas em realidade</li>
-        </ul>
-    </section> -->
 
   <!-- Seção de FAQ -->
   <section id="faq" class="faq-section">
