--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           projetos criativos.</h2>
       </div>
       <div class="formulario">
-        <form>
+        <form id="contact-form">
           <label for="email"> Assine para receber nossos conteúdos: </label>
           <input class="input-email" type="email" id="email" name="email" placeholder="Insira seu melhor e-mail aqui*">
-          <input class="enviar-formulario" type="submit" value="Participar" onclick="sendMail()">
+          <button class="enviar-formulario" onclick="sendMail()"> Participar </button>
         </form>
       </div>
     </div>
