--- a/src/html/missao.html
+++ b/src/html/missao.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Missão</h1>
 
-    <p>Na Criartividades, nossa missão é transformar a criatividade em uma força acessível e poderosa que impulsiona a nova economia dos criadores e estudantes no Brasil. Acreditamos apaixonadamente em três pilares fundamentais:</p>
+    <p>Na Criartividades, nossa missão é transformar a criatividade em uma força acessível e poderosa que impulsiona a nova economia dos estudantes e criadores no Brasil. Acreditamos apaixonadamente em três pilares fundamentais:</p>
 
     <p><em>- Democratização e Acessibilidade da Criatividade:</em> Queremos que todos tenham a oportunidade de explorar, desenvolver e compartilhar sua criatividade. Não importa quem você é, onde vive ou qual é o seu nível de experiência. A criatividade não deve conhecer barreiras, e estamos comprometidos em remover obstáculos para que todos possam participar.</p>
 
