pequenas alterações na nav bar
upload de código para continuar editando em outra máquina

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="nav-center">
       <a class="active" href="./src/html/missao.html">MISSÃO</a>
-      <a href="#contact">ATIVIDADES</a>
-      <a href="#about">AVALIAÇÕES</a>
+      <a href="#blog"> CONTEÚDOS </a>
+      <a href="#about"> CASOS REAIS </a>
     </div>
     <div class="nav-right">
       <button class="botao-contato"> CONTATO </button>
@@ -130,7 +130,6 @@
   <footer class="footer">
     <p>&copy; 2023 Criartividades - Todos os direitos reservados</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 
 </html>
