--- a/src/html/missao.html
+++ b/src/html/missao.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> missao - criartividades</title>
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" type="text/css" href="../css/missao.css">
 </head>
 <body>
-    <h1>Missão</h1>
-
-    <p>Na Criartividades, nossa missão é transformar a criatividade em uma força acessível e poderosa que impulsiona a nova economia dos estudantes e criadores no Brasil. Acreditamos apaixonadamente em três pilares fundamentais:</p>
-
-    <p><em>- Democratização e Acessibilidade da Criatividade:</em> Queremos que todos tenham a oportunidade de explorar, desenvolver e compartilhar sua criatividade. Não importa quem você é, onde vive ou qual é o seu nível de experiência. A criatividade não deve conhecer barreiras, e estamos comprometidos em remover obstáculos para que todos possam participar.</p>
-
-    <p><em>- Plataforma de Aprendizado e Comunidade:</em> Criartividades não é apenas um lugar para aprender, mas também uma comunidade vibrante de mentes criativas. Aqui, você encontrará cursos excepcionais ministrados por especialistas e uma rede de criadores que compartilham suas paixões e ideias. Juntos, crescemos, aprendemos e inovamos.</p>
-
-    <p><em>- Adaptação à Nova Economia dos Criadores:</em> Estamos conscientes das mudanças rápidas na economia, onde os criadores desempenham um papel cada vez mais importante. Queremos ajudar você a prosperar nessa economia em constante evolução. Criartividades é o lugar onde suas ideias criativas ganham vida, e você pode contar com nosso apoio para <em>tornar seus projetos realidade</em>.</p>
+    <nav>
+        <div class="logo">
+          <a href="../../index.html">
+              <h1>CRIARTIVIDADES</h1>
+          </a>
+        </div>
+        <div class="nav-center">
+          <a href="#blog"> CONTEÚDOS </a>
+          <a href="#about"> CASOS REAIS </a>
+        </div>
+        <div class="nav-right">
+          <a href="./src/html/contato.html" target="_blank"><button class="botao-contato"> CONTATO </button></a>
+        </div>
+    </nav>
+    <main>
+        <h2>Missão</h2>
+        <p>Na Criartividades, nossa missão é transformar a criatividade em uma força acessível e poderosa que impulsiona a nova economia dos estudantes e criadores no Brasil. Acreditamos apaixonadamente em três pilares fundamentais:</p>
+        <p><em>• Democratização e Acessibilidade da Criatividade:</em> Queremos que todos tenham a oportunidade de explorar, desenvolver e compartilhar sua criatividade. Não importa quem você é, onde vive ou qual é o seu nível de experiência. A criatividade não deve conhecer barreiras, e estamos comprometidos em remover obstáculos para que todos possam participar.</p>
+        <p><em>• Plataforma de Aprendizado e Comunidade:</em> Criartividades não é apenas um lugar para aprender, mas também uma comunidade vibrante de mentes criativas. Aqui, você encontrará cursos excepcionais ministrados por especialistas e uma rede de criadores que compartilham suas paixões e ideias. Juntos, crescemos, aprendemos e inovamos.</p>
+        <p><em>• Adaptação à Nova Economia dos Criadores:</em> Estamos conscientes das mudanças rápidas na economia, onde os criadores desempenham um papel cada vez mais importante. Queremos ajudar você a prosperar nessa economia em constante evolução. Criartividades é o lugar onde suas ideias criativas ganham vida, e você pode contar com nosso apoio para <em>tornar seus projetos realidade</em>.</p>
+    </main>
 </body>
 </html>
