adicionei seção de blogs

--- a/index.html
+++ b/index.html
@@ -92,9 +92,42 @@
     </div>
   </section>
 
+  <!-- Seção de blog -->
+  <section id="blog" class="blog-section">
+    <h2>Conteúdos</h2>
+    <div class="blog-item">
+      <img src="./src/img/img-blog-1.jpg">
+      <div class="blog-text">
+        <h3>Como criar um projeto de crowdfunding</h3>
+        <p>Se você tem uma ideia e quer tirá-la do papel, mas não sabe como, esse conteúdo é pra você!</p>
+        <a href="./src/html/blog.html" target="_blank"><button class="botao-blog"> Ler mais </button></a>
+      </div>
+    </div>
+    <div class="blog-item">
+      <img src="./src/img/img-blog-2.jpg">
+      <div class="blog-text">
+        <h3>Como criar um projeto de crowdfunding</h3>
+        <p>Se você tem uma ideia e quer tirá-la do papel, mas não sabe como, esse conteúdo é pra você!</p>
+        <a href="./src/html/blog.html" target="_blank"><button class="botao-blog"> Ler mais </button></a>
+      </div>
+    </div>
+    <div class="blog-item">
+      <img src="./src/img/img-blog-3.jpg">
+      <div class="blog-text">
+        <h3>Como criar um projeto de crowdfunding</h3>
+        <p>Se você tem uma ideia e quer tirá-la do papel, mas não sabe como, esse conteúdo é pra você!</p>
+        <a href="./src/html/blog.html" target="_blank"><button class="botao-blog"> Ler mais </button></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Seção de cases -->
+  
+
+
   <!-- Seção de FAQ -->
   <section id="faq" class="faq-section">
-    <h2>Perguntas Frequentes</h2>
+    <h2>Perguntas Frequentes - (EM CONSTRUÇÃO)</h2>
     <div class="faq-item">
       <button class="faq-question">Quais são os pré-requisitos para ingressar nos cursos?</button>
       <div class="faq-answer">
