--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
   </section>
 
-  <!-- Seção de blog -->
+  <!-- Seção de blog 
   <section id="blog" class="blog-section">
     <h2>Conteúdos</h2>
     <div class="blog-item">
@@ -120,12 +120,11 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- Seção de cases -->
-  
 
-
-  <!-- Seção de FAQ -->
+  <!-- Seção de FAQ 
   <section id="faq" class="faq-section">
     <h2>Perguntas Frequentes - (EM CONSTRUÇÃO)</h2>
     <div class="faq-item">
@@ -155,6 +154,8 @@
       </div>
     </div>
   </section>
+  -->
+
   <footer class="footer">
     <p>&copy; 2023 Criartividades - Todos os direitos reservados</p>
   </footer>
